fix: Notification title overlapping close button

--- a/packages/ui/src/2_molecules/Notification/Notification.module.css
+++ b/packages/ui/src/2_molecules/Notification/Notification.module.css
@@ -25,8 +25,8 @@
     }
   }
 
- & .title {
-    @apply flex items-center;
+  & .title {
+    @apply flex items-center text-center pr-3;
     & svg {
       @apply mr-2;
     }
